refactor: combine discord and aspect emits into one function feat: add /online command for checking who online has the mod feat: add feedback for connecting sockets feat: add highlighting for own username in discord bridge messages