@@ -5,6 +5,9 @@ import io.socket.client.IO;
 import io.socket.client.Socket;
 import net.fabricmc.fabric.api.client.command.v2.ClientCommandManager;
 import net.fabricmc.fabric.api.client.command.v2.ClientCommandRegistrationCallback;
+import net.minecraft.text.Style;
+import net.minecraft.text.Text;
+import net.minecraft.util.Formatting;
 import pixlze.guildapi.GuildApi;
 import pixlze.guildapi.components.Managers;
 import pixlze.guildapi.components.Models;
@@ -12,6 +15,7 @@ import pixlze.guildapi.models.event.WorldStateEvents;
 import pixlze.guildapi.models.type.WorldState;
 import pixlze.guildapi.net.type.Api;
 import pixlze.guildapi.utils.McUtils;
+import pixlze.guildapi.utils.type.Prepend;
 
 import java.net.URI;
 import java.util.Collections;
@@ -22,8 +26,8 @@ import java.util.function.Consumer;
 
 public class SocketIOClient extends Api {
     private static SocketIOClient instance;
-    private Socket aspectSocket;
-    private Socket discordSocket;
+    public Socket aspectSocket;
+    public Socket discordSocket;
     private GuildApiClient guild;
 
     public SocketIOClient() {
@@ -31,13 +35,13 @@ public class SocketIOClient extends Api {
         if (GuildApi.isDevelopment()) {
             ClientCommandRegistrationCallback.EVENT.register((dispatcher, registryAccess) -> {
                 dispatcher.register(ClientCommandManager.literal("emit").executes((context) -> {
-                    aspectEmit("give_aspect", Collections.singletonMap("player", "test"));
+                    emit(aspectSocket, "give_aspect", Collections.singletonMap("player", "test"));
                     return 0;
                 }));
                 dispatcher.register(ClientCommandManager.literal("testmessage")
                         .then(ClientCommandManager.argument("message", StringArgumentType.word())
                                 .executes((context) -> {
-                                    discordEmit("send", Map.of("username", McUtils.playerName(), "message", StringArgumentType.getString(context, "message")));
+                                    emit(discordSocket, "send", Map.of("username", McUtils.playerName(), "message", StringArgumentType.getString(context, "message")));
                                     return 0;
                                 })));
             });
@@ -45,16 +49,14 @@ public class SocketIOClient extends Api {
         instance = this;
     }
 
-    public void aspectEmit(String event, Map<?, ?> data) {
-        if (aspectSocket != null && aspectSocket.connected()) aspectSocket.emit(event, data);
-        else GuildApi.LOGGER.warn("skipped event because of missing or inactive aspect socket");
-    }
-
-    public void discordEmit(String event, Object data) {
-        if (discordSocket != null && discordSocket.connected()) {
+    public void emit(Socket socket, String event, Object data) {
+        if (socket != null && socket.connected()) {
             GuildApi.LOGGER.info("emitting, {}", data);
-            discordSocket.emit(event, data);
-        } else GuildApi.LOGGER.warn("skipped event because of missing or inactive discord socket");
+            socket.emit(event, data);
+        } else {
+            McUtils.sendLocalMessage(Text.literal("§eChat server not connected"), Prepend.GUILD.get());
+            GuildApi.LOGGER.warn("skipped event because of missing or inactive socket");
+        }
     }
 
     @Override
@@ -71,17 +73,23 @@ public class SocketIOClient extends Api {
 
     private void initSocket() {
         IO.Options options = IO.Options.builder()
-                .setExtraHeaders(Collections.singletonMap("authorization", Collections.singletonList("bearer " + guild.getToken())))
+                .setExtraHeaders(Map.of("authorization", Collections.singletonList("bearer " + guild.getToken()), "from", Collections.singletonList(McUtils.playerName())))
                 .build();
         aspectSocket = IO.socket(URI.create(guild.getBaseURL() + "aspects"), options);
         discordSocket = IO.socket(URI.create(guild.getBaseURL() + "discord"), options);
+        addDiscordListener("connect_error", (err) -> McUtils.sendLocalMessage(Text.literal("§cCould not connect to chat server."), Prepend.GUILD.getWithStyle(Style.EMPTY.withColor(Formatting.RED))));
+        addDiscordListener("connect", (args) -> McUtils.sendLocalMessage(Text.literal("§aSuccessfully connected to chat server."), Prepend.GUILD.getWithStyle(Style.EMPTY.withColor(Formatting.GREEN))));
         if (GuildApi.isDevelopment() || Models.WorldState.onWorld()) {
             aspectSocket.connect();
             discordSocket.connect();
-            GuildApi.LOGGER.info("sockets on");
+            GuildApi.LOGGER.info("sockets connecting");
         }
         WorldStateEvents.CHANGE.register(this::worldStateChanged);
         super.enable();
+    }
+
+    public void addDiscordListener(String name, Consumer<Object[]> listener) {
+        discordSocket.on(name, listener::accept);
     }
 
     private void worldStateChanged(WorldState state) {
@@ -117,9 +125,5 @@ public class SocketIOClient extends Api {
         super.unready();
         aspectSocket.disconnect();
         discordSocket.disconnect();
-    }
-
-    public void addDiscordListener(String name, Consumer<Object[]> listener) {
-        discordSocket.on(name, listener::accept);
     }
 }
